Fix a ton more static analysis identified problems (#1176)
Signed-off-by: Byron Marohn <Combustible@live.com>